# CVGLBasedSimpleAndroidAR

./: README.md
tutorial-2-mixedprocessing/: AndroidManifest.xml  build.gradle
tutorial-2-mixedprocessing/jni/: ARRenderer.cpp  ARRenderer.hpp  Android.mk  CMakeLists.txt  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VideoRenderer.cpp  VideoRenderer.hpp  jni_part.cpp
tutorial-2-mixedprocessing/jni/aruco/fractallabelers/: fractalposetracker.h
tutorial-2-mixedprocessing/res/values/: strings.xml
tutorial-2-mixedprocessing/src/org/opencv/samples/tutorial2/: ARApplication.java  GL3CV4Lib.java  GL3CV4View.java
